--- a/themes/default/base.css
+++ b/themes/default/base.css
@@ -1,29 +1,33 @@
-@media screen and (min-width: 400px) {
-}
-@media print {
-    
-}
-
 body {
-    background-color: white;
+    background-color:white;
 }
 
-.invisible {visibility:hidden};
-.visible {visibility:visible};
+.invisible {visibility:hidden;}
+.visible {visibility:visible;}
 
-/*Some test stuff by Matt while playing. Ok to delete:*/
-.userProfile label {font-style:normal; font-weight:bold;}
-.userProfile input {border:none; float: right}
+.tasksForm .taskLevelZero {
+    font-size: larger;
+}
+.tasksForm .taskLevelOne {
+    margin-left: 10px;
+}
+.formDisabled div {
+    background-color: #cccccc;
+}
+.formDisabled input:disabled {
+    background-color: #cccccc;
+    border: none;
+}
 
 .tableBadges tr {
-	height: 150px;
+    height: 150px;
 }
 
 .tableBadges tr td {
-	width: 33%;
-	text-align: center;
+    width: 33%;
+    text-align: center;
 }
 
 .tableBadges tr td img {
-	width: 100%;
+    width: 100%;
 }
